Fixes misaligned navbar dropdown.

--- a/src/directives/templates/styles/_mmsNav.scss
+++ b/src/directives/templates/styles/_mmsNav.scss
@@ -139,6 +139,9 @@ mms-nav {
 }
 
 .navbar {
+  .goto.dropdown ul{ 
+    width:100%;
+  }
   .block {
     position: relative;
     margin: 0 auto;
@@ -171,6 +174,7 @@ mms-nav {
     border: 0;
     margin: 8px 0 0;
     padding: 0;
+
 
     > li > a {
       padding: 12px;
